--- a/src/index.css
+++ b/src/index.css
@@ -355,3 +355,10 @@ bottom: 31.5%;
 left: 50.5%;
 border-radius: 50% 50% 50% 50% / 50% 50% 50% 50% ;
 }
+
+#england{
+position: absolute;
+bottom: 62%;
+left: 43%;
+border-radius: 50% 50% 50% 50% / 50% 50% 50% 50% ;
+}
